FIX - Amend spacing between accessory products min 950px screen size

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -519,7 +519,6 @@ hr {
     }
 
     .acc-box-sm{
-        margin-left: 5rem;
         margin-bottom: 10px;
     }
 
